--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -22,7 +22,7 @@
             <div class="profile-info">
               <h1>Amanda Rush</h1>
               <h2>Student of Web Development</h2>
-              <button id="portfolio">Portfolio</button>
+              <a href="/portfolio.html" id="portfolio" class="portfolio-link">Portfolio</a>
             </div>
         </main>
     </body>
