create resume grid

--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <div class="grid-container">
+        <section>Name</section>
+        <section>Overview</section>
+        <section>Work Highlights</section>
+        <section>Job One</section>
+        <section>Job One Description</section>
+        <section>Job Two</section>
+        <section>Job Two Description</section>
+        <section>Education</section>
+        <section>School One</section>
+        <section>School One Description</section>
+        <section>School Two</section>
+        <section>School Two Description</section>
+        <section>Work Achievements</section>
+    </div>
+    <!-- <div class="grid-container">
         <header>Header</header>
         <section>
             <h1>Profile</h1>
@@ -21,6 +36,6 @@
         <section>Expertise</section>
         <section>Experience</section>
         <section>last row</section>
-    </div>
+    </div> -->
 </body>
 </html>
