create resume layout

--- a/resume.html
+++ b/resume.html
@@ -9,33 +9,89 @@
 </head>
 <body>
     <div class="grid-container">
-        <section>Name</section>
-        <section>Overview</section>
-        <section>Work Highlights</section>
-        <section>Job One</section>
-        <section>Job One Description</section>
-        <section>Job Two</section>
-        <section>Job Two Description</section>
-        <section>Education</section>
-        <section>School One</section>
-        <section>School One Description</section>
-        <section>School Two</section>
-        <section>School Two Description</section>
-        <section>Work Achievements</section>
-    </div>
-    <!-- <div class="grid-container">
-        <header>Header</header>
         <section>
-            <h1>Profile</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sagittis lobortis finibus. Donec feugiat viverra elit, nec iaculis neque tincidunt sodales.</p>
+            <div class="content">
+                <h1>First Name<br>Last Name</h1>
+                <p>Web Developer</p>
+            </div>
         </section>
-        <section>image</section>
-        <section>reachme</section>
-        <section>Education</section>
-        <section>Skills</section>
-        <section>Expertise</section>
-        <section>Experience</section>
-        <section>last row</section>
-    </div> -->
+        <section>
+            <div class="content">
+                <h2>General<br>Overview</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, esse recusandae. Saepe consequatur at consequuntur, quas natus.</p>
+            </div>  
+        </section>
+        <section>
+            <h2>Work Highlights</h2>
+        </section>
+        <section>Job Title One</section>
+        <section>
+            <em>Job One Description</em>
+            <ul>
+                <li>Voluptatibus, esse recusandae.</li>
+                <li>Saepe consequatur at consequuntur.</li>
+                <li>Quas natus itaque dolores.</li>
+            </ul>
+        </section>
+        <section>Job Title Two</section>
+        <section>
+            <em>Job Two Description</em>
+            <ul>
+                <li>Saepe consequatur at consequuntur.</li>
+                <li>Quas natus itaque dolores.</li>
+                <li>Voluptatibus, esse recusandae.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>My Education</h2>
+        </section>
+        <section>University</section>
+        <section>
+            <em>University Description</em>
+            <ul>
+                <li>Quas natus itaque dolores.</li>
+                <li>Voluptatibus, esse recusandae.</li>
+                <li>Saepe consequatur at consequuntur.</li>       
+            </ul>
+        </section>
+        <section>High School</section>
+        <section>
+            <em>High School Description</em>
+            <ul>
+                <li>Voluptatibus, esse recusandae.</li>
+                <li>Quas natus itaque dolores.</li>
+                <li>Saepe consequatur at consequuntur.</li>       
+            </ul>
+        </section>
+        <section>
+            <h2>Work<br>Achievements</h2>
+            <ul>
+                <li>Achievement One</li>
+                <li>Achievement Two</li>
+                <li>Achievement Three</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Reach Me At</h2>
+            <p>
+                Address<br>
+                City, State Zip<br>
+                Phone<br>
+                Email<br>
+                Website
+            </p>
+        </section>
+        <section>
+            <h2>Work<br>References</h2>
+            <p>
+                Reference One<br>
+                Email
+            </p>
+            <p>
+                Reference Two<br>
+                Email
+            </p>
+        </section>
+    </div>
 </body>
 </html>
