--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
             <nav>
-                <a href="">Resume</a>
+                <a href="https://mandyrush.github.io/ACA_web101_Amanda_Rush/resume.html">Resume</a>
                 <a href="">About Me</a>
                 <a href="">My Blog</a>
                 <a href="">Contact Me</a>
