add profile image to resume

--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,8 @@
     <div class="grid-container">
         <section>
             <div class="content">
-                <h1>First Name<br>Last Name</h1>
+                <img src="./dog-bow-tie-resized.jpg" alt="Profile Image" class="profile-img">
+                <h1>Max</h1>
                 <p>Web Developer</p>
             </div>
         </section>
