create contact page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <nav>
                 <a href="https://mandyrush.github.io/ACA_web101_Amanda_Rush/resume.html">Resume</a>
                 <a href="">About Me</a>
-                <a href="">My Blog</a>
-                <a href="">Contact Me</a>
+                <a href="https://mandyrush85.medium.com/" target="_blank" rel="noopener noreferrer">My Blog</a>
+                <a href="https://mandyrush.github.io/ACA_web101_Amanda_Rush/contact.html">Contact Me</a>
             </nav>
         </header>
         <main>
