add link to about page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
             <nav>
                 <a href="https://mandyrush.github.io/ACA_web101_Amanda_Rush/resume.html">Resume</a>
-                <a href="">About Me</a>
+                <a href="https://mandyrush.github.io/ACA_web101_Amanda_Rush/about.html">About Me</a>
                 <a href="https://mandyrush85.medium.com/" target="_blank" rel="noopener noreferrer">My Blog</a>
                 <a href="https://mandyrush.github.io/ACA_web101_Amanda_Rush/contact.html">Contact Me</a>
             </nav>
