--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./contact.styles.css">
-    <script src="./contact.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- Fonts -->
@@ -25,7 +24,7 @@
             </nav>
         </header>
         <main>
-            <form id="contact-form" action="result.html" method="POST">
+            <form id="contact-form" action="results.html" method="GET">
                 <h2>Contact Me</h2>
                 <div class="form-group">
                     <label for="name">Your Name <span class="required-marker">*</span></label>
@@ -83,7 +82,7 @@
                     <input type="date" name="birthday" id="birthday">
                 </div>
 
-                <button class="btn-primary" type="submit">Send</button>
+                <button id="submit-btn" class="btn-primary" type="submit">Send</button>
             </form>
         </main>
         <footer>
@@ -104,5 +103,6 @@
             <a href="#"><i class="fas fa-envelope"></i> Email</a>
         </footer>
     </div>
+    <script src="./contact.js"></script>
 </body>
 </html>
